fixed quixey frame width, no more border clipping

--- a/share/spice/quixey/spice.css
+++ b/share/spice/quixey/spice.css
@@ -34,13 +34,11 @@
 #slider {
   border: 1px solid #f7f7f7;
   padding: 7px;
-  padding-right: 6px;
 }
 
 #frame {
   margin: 0;
   overflow: hidden;
-  width: 100%;
 }
 
 #quixey ul {
